<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Factograph</string>
    <string name="hello">Hello World, Todo!</string>
    <string name="no_todos">Currently there are no fact items maintained</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Todo</string>
    <string name="todo_summary">Summary</string>
    <string name="todo_description">Delete Todo</string>
    <string name="todo_edit_summary">Summary</string>
    <string name="todo_edit_description">Description</string>
    <string name="todo_edit_confirm">Confirm</string>
    <string name="ef_edit_confirm">Confirm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_overview">Overview</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_details">Details</string>
    <string name="Button_start">Start</string>
    <string name="Button_exit">Exit</string>
    <string name="Button_auth">Auth</string>
    <string name="title_activity_auth">Auth</string>
    <string name="Auth">Please, enter your login and password</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="button_auth">Sign in</string>
    <string name="button_registration">Sign up</string>
    <string name="voids"></string>
    <string name="title_activity_restrate">Restrate</string>
    <string name="registration_text">Input login, password and rights level</string>
    <string name="right_of_write">Right Of Write</string>
    <string name="title_activity_monte_moi_ef">MonteMoiEF</string>
    <string name="title_section1">Fact</string>
    <string name="title_section2">Event</string>
    <string name="title_section3">Place</string>
    <string name="links_header">Links View</string>
    <string name="pattern">.*</string>
    <string name="EFview">Event/Fact/Place view</string>
    <string name="title_activity_edit_ef">EditEF</string>
    <string name="title_activity_links">Links</string>
    <string name="next">Next</string>
    <string name="tags_show">Show</string>
    <string name="tags_title">Tags</string>
    <string name="previous">Previous</string>
    <string name="update_fields">Update spinners data</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_tags">Tags</string>
    <string name="linqued_users_title">Linked Users</string>
    <string name="add">Add</string>
    <string name="title_activity_linked_user">LinkedUser</string>
    <string name="voides"></string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="music_path"></string>
    <string name="title_activity_export">Export</string>
    <string name="export_xml">Export in xml</string>
    <string name="export_txt">Export in txt</string>
</resources>
