<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.astra.app.factograph.m_fact.MainActivity">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_start"
        android:id="@+id/button"
        android:onClick="buttonClicked"
        android:layout_marginTop="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_exit"
        android:id="@+id/button2"
        android:onClick="buttonClicked"
        android:layout_marginTop="145dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_auth"
        android:id="@+id/button3"
        android:onClick="buttonClicked"
        android:layout_marginTop="185dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_registration"
        android:id="@+id/button4"
        android:onClick="buttonClicked"
        android:layout_marginTop="225dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EFview"
        android:id="@+id/button5"
        android:onClick="buttonClicked"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
