<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/linqued_users_title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/tags_show"
            android:id="@+id/ef_edit_linked_users_montre"
            android:ellipsize="middle"
            android:focusable="false"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/add"
            android:id="@+id/ef_edit_linked_users_add"
            android:onClick="buttonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/delete"
            android:id="@+id/ef_edit_linked_users_delete"
            android:onClick="buttonClicked"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ef_edit_linked_users_listView"
        android:layout_gravity="center_horizontal"
        android:listSelector="@color/purple"
        android:longClickable="false"
        android:headerDividersEnabled="false"/>
</LinearLayout>