<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.astra.app.factograph.m_fact.EditEF">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:onClick="buttonClicked"
                android:id="@+id/ef_previous_button"
                android:layout_column="2"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ef_edit_button"
                android:onClick="buttonClicked"
                android:text="@string/ef_edit_confirm"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_column="3"></Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:onClick="buttonClicked"
                android:id="@+id/ef_next_button"
                android:layout_column="5"/>

        </TableRow>

    </TableLayout>

    <ViewFlipper
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/ef_edit_flipper"
        android:background="@color/listcolor"
        android:animateFirstView="true">

    </ViewFlipper>

</LinearLayout>
