<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.astra.app.factograph.m_fact.MonteMoiEF$PlaceholderFragment"
    android:id="@+id/eventfact1">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnOrderPreserved="false"
        android:background="@color/listcolor">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/orange">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/orange">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:id="@+id/button"
                    android:onClick="buttonClicked"
                    android:layout_toEndOf="@+id/section_label"
                    android:layout_below="@+id/section_label"
                    android:layout_toRightOf="@+id/section_label"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:id="@+id/button2"
                    android:onClick="buttonClicked"
                    android:layout_alignTop="@+id/button"
                    android:layout_toRightOf="@+id/button"
                    android:layout_toEndOf="@+id/button"/>

                <TextView
                    android:id="@+id/section_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/listcolor">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"
                    android:id="@+id/button3"
                    android:onClick="buttonClicked"
                    android:layout_toEndOf="@+id/button2"
                    android:layout_alignTop="@+id/button2"
                    android:layout_toRightOf="@+id/button2"/>

                <Spinner
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/monte_moi_spinner"
                    android:entries="@array/TypeForSearch"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/monte_moi_search"
                    android:text="@string/search"
                    android:layout_toEndOf="@+id/section_label"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/button"
                    android:layout_toRightOf="@+id/section_label"/>

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@android:id/list"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:choiceMode="singleChoice"
                android:background="@color/light_green"/>
            <!--android:id="@+id/monte_moi_list_view"-->
        </TableRow>
    </TableLayout>

</RelativeLayout>
